--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <script src="public/bundle.js"></script>
     </head>
     <body>
-    hoge
+      <div id="app"></div>
     </body>
 </html>
